--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,36 @@
     <div ng-controller="PortfolioController">
         <div id="title">smallcase Portfolio Builder</div>
         <div id="page-container" >
-            <div style="color:#00A9D2">Showing {{pagestart+1}} - {{pageend}} of {{totallist.length}} matching stocks</div>
+            <div class="ribbon-top">PICK STOCKS</div>
+            <div class="ribbon-top-shadow"></div>
+            <div class="triangle-top"></div>
+            <div id="top-container">
+                <div style="color:#00A9D2">Showing {{pagestart+1}} - {{pageend}} of {{totallist.length}} matching stocks</div>
+                <div id="filter-button" style="line-height:1.25rem">
+                    <span><img src="style/filter - FontAwesome.png" height="14px"style="margin-right:0.77rem"/>
+                    <span style="font-size:1rem">APPLY FILTERS</span>
+                    <span class="circle">3</span>
+                </span></div>
+            </div>
+
+
             <div class="card-container">
                 <div class="card" dnd-draggable="stock" dnd-moved="addtoportlist(stock)" dnd-effect-allowed="move" ng-repeat="stock in watchlist">
-                    <div class="card-text">{{stock.name}}:{{stock.price}} </div>
+                    <div style="display:inline-block" >
+                        <div class="card-text">{{stock.name}} </div>
+                        <div class="card-group-text">Financial Services</div>
+                    </div>
+
+                    <div style="display:inline-block;margin-left:2.5rem;" class="card-price"> ₹{{stock.price}}</div>
+
                 </div>
             </div>
-            <div style="float:left" ng-click="pageback()">BACK</div>
-            <div style="float:right" ng-click="pagenext()">NEXT</div>
+            <div id="pagination-container">
+                <div ng-hide="pagestart == 0" ng-click="pageback()">PREV</div>
+                <div ng-show="pagestart == 0" style="opacity:0.3 ">PREV</div>
+                <div ng-hide="totallist.length - pagestart < 8" ng-click="pagenext()">NEXT</div>
+                <div ng-show="totallist.length - pagestart < 8" style="opacity:0.3">NEXT</div>
+            </div>
         </div>
 
         <div id="bottom-container">
@@ -64,7 +86,8 @@
                     </li>
                 </div>
             </div>
-            <div style="width:25%">
+            <div style="width:30%">
+                <p style="color:#1D70CA;font-size:1.5rem">Portfolio Overview</p>
                 <div zingchart id="chart-1" zc-json="myChartJson" zc-width="100%" zc-height="100%"></div>
             </div>
             <div style="width:35.6%">
