--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8">
     <title>smallcase | Portfolio Tracker </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <script src="lib/angular.min.js" type="text/javascript"></script>
-    <script src="app/portfolio.js" type="text/javascript"></script>
-    <script src="lib/angular-drag-and-drop-lists.min.js"></script>
+
+
     <link href="style/smallfonts/fonts.css" rel="stylesheet" type="text/css">
     <link href="style/styles.css" rel="stylesheet" type="text/css">
-    <script src="lib/plotly.js"></script>
-    <script src="lib/angular-plotly.js"></script>
+
 </head>
 <body>
     <header>
@@ -129,4 +127,11 @@
 
 
 </body>
+<footer>
+    <script src="lib/angular.min.js" type="text/javascript"></script>
+    <script src="app/portfolio.js" type="text/javascript"></script>
+    <script src="lib/angular-drag-and-drop-lists.min.js"></script>
+    <script src="lib/plotly.js"></script>
+    <script src="lib/angular-plotly.js"></script>
+</footer>
 </html>
