--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
                     <div id="filter-button">
                         <img src="style/filter - FontAwesome.png" height:"0.98rem"  style="position:relative;top:0.92rem;left:1rem;"/>
                         <span style="font-size:1rem;position:absolute;top:0.75rem;left:2.75rem;line-height:1.4rem">APPLY FILTERS</span>
-                        <span class="circle" style="position:absolute;top:0.75rem;left:12.75rem">3</span>
+                        <span class="circle" style="position:absolute;top:0.75rem;left:12.75rem;padding-left:1px">3</span>
                     </div>
                 </div>
 
@@ -74,12 +74,12 @@
 
                                     <td style="color:#287DCE;font-size:0.88rem">{{stock.stockname}}</td>
                                     <td style="color:#101010;font-family: 'ProximaNovaRegular';">₹{{stock.stockprice}} </td>
-                                    <td style="color:#222;font-family:'proxima_nova_ltsemibold';font-size:0">
-                                        <button class="small-btn" ng-click="decrementqty(stock.stockname)" style="border-top-right-radius: 0;border-bottom-right-radius: 0"><strong>-</strong></button>
+                                    <td style="color:#222;font-family:'proxima_nova_ltsemibold';font-size:0;position:relative">
+                                        <button class="small-btn" ng-click="decrementqty(stock.stockname)" style="border-top-right-radius: 0;border-bottom-right-radius: 0">&minus;</button>
                                         <input type="text" ng-model="stock.stockqty" class="inputstocks" ng-blur="editportlist(stock.stockname, stock.stockqty)"/>
-                                        <button class="small-btn"  ng-click="incrementqty(stock.stockname)" style="border-top-left-radius: 0;border-bottom-left-radius: 0"><strong>+</strong></button>
+                                        <button class="small-btn"  ng-click="incrementqty(stock.stockname)" style="border-top-left-radius: 0;border-bottom-left-radius: 0;">&plus;</button>
                                     </td>
-                                    <td style="color:#222;font-family: 'ProximaNovaRegular';"> {{(stock.weightage*100).toFixed(1)}}% </td>
+                                    <td style="color:#222;font-family: 'ProximaNovaRegular';">{{(stock.weightage*100).toFixed(1)}}%</td>
                                     <td> <span ng-click="removestock(stock.stockname)" style="cursor:pointer"><img src="style/remove_circle - material.png"</span></td>
                                 </tr>
 
