--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
                         <div class="details-title" style="left:0rem;">Stocks</div>
                         <div class="details-text" style="top:1.5rem">{{numstocks}}</div>
                         <div class="details-title" style="left:7.06rem">Net Worth</div>
-                        <div class="details-text" style="top:1.5rem;left:7.06rem">₹{{networth.toFixed(2)}}</div>
+                        <div class="details-text" style="top:1.5rem;left:7.06rem">₹{{networth | number:0}}</div>
                         <div class="details-title" style="top:4.5rem">P/E Ratio</div>
                         <div class="details-text" style="top:6rem;">{{peratio.toFixed(2)}}</div>
                         <div class="details-title" style="top:4.5rem;left:7.06rem">P/B Ratio</div>
