Move feature added

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
                         <div class="card-text">{{stock.name}}</div>
                         <div class="card-group-text">Financial Services</div>
-                        <div class="card-price">₹{{stock.price}}</div>
+                        <div class="card-price">₹{{stock.price.toFixed(2)}}</div>
 
                     </div>
                 </div>
