--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
                         </plotly>
                         <!-- <div zingchart id="chart-1" zc-json="myChartJson" zc-width="100%" zc-height="100%"></div> -->
                     </div>
-                    <div style="margin-left:2.88rem;background-color:#555;position:relative;margin-top:8.2rem">
+                    <div style="margin-left:2.88rem;position:relative;margin-top:8.2rem;">
                         <div class="details-title" style="left:0rem;">Stocks</div>
                         <div class="details-text" style="top:1.5rem">{{numstocks}}</div>
                         <div class="details-title" style="left:7.06rem">Net Worth</div>
@@ -113,7 +113,6 @@
                         <div class="details-title" style="top:4.5rem;left:7.06rem">P/B Ratio</div>
                         <div class="details-text" style="top:6rem;left:7.06rem">12.4</div>
                         <div class="build-portfolio" style="top:8.63rem;">BUILD PORTFOLIO</div>
-
                     </div>
 
 
